fix: folder click on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,6 @@
 body {
   overscroll-behavior-y: contain;
   overflow: hidden;
-  touch-action: manipulation;
   -webkit-tap-highlight-color: transparent;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
